@@ -4,27 +4,25 @@
 
   Copyright (C) 2012, Molnar Karoly <molnarkaroly@users.sf.net>
 
-  This library is free software; you can redistribute it and/or modify it
-  under the terms of the GNU General Public License as published by the
-  Free Software Foundation; either version 2, or (at your option) any
-  later version.
+    This software is provided 'as-is', without any express or implied
+    warranty.  In no event will the authors be held liable for any damages
+    arising from the use of this software.
 
-  This library is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-  GNU General Public License for more details.
+    Permission is granted to anyone to use this software for any purpose,
+    including commercial applications, and to alter it and redistribute it
+    freely, subject to the following restrictions:
 
-  You should have received a copy of the GNU General Public License 
-  along with this library; see the file COPYING. If not, write to the
-  Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston,
-  MA 02110-1301, USA.
+    1. The origin of this software must not be misrepresented; you must not
+       claim that you wrote the original software. If you use this software
+       in a product, an acknowledgment in the product documentation would be
+       appreciated but is not required.
 
-  As a special exception, if you link this library with other files,
-  some of which are compiled with SDCC, to produce an executable,
-  this library does not by itself cause the resulting executable to
-  be covered by the GNU General Public License. This exception does
-  not however invalidate any other reasons why the executable file
-  might be covered by the GNU General Public License.
+    2. Altered source versions must be plainly marked as such, and must not be
+       misrepresented as being the original software.
+
+    3. This notice may not be removed or altered from any source distribution.
+
+================================================================================
 
     Proposal for use: ./pic16-header-parser.pl -gp
 
